--- a/package.json
+++ b/package.json
@@ -6,5 +6,7 @@
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
     , "pivotal": ">= 0.0.1"
+    , "underscore": ">= 0.0.1"
+    , "connect-redis": ">= 0.0.1"
   }
 }
